--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -10,7 +10,7 @@
     <!-- TODO: Update blank fragment layout -->
 
     <TextView
-        android:id="@+id/zalupa"
+        android:id="@+id/example_coords"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Hello"
